--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -1,7 +1,7 @@
 // ********************* \\
 // ***** 01 - Variables ***** \\
 @import "./utils/variables";
-
+@import "./utils/mixin";
 
 // ********************* \\
 // ***** 02 - Base ***** \\
