--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -28,7 +28,7 @@
         <h2>La note enchantée</h2> 
         <main class="block_center width_menu color_menu--bg1 shadow-box style_menu1 padding_bottom"> 
             <div class="txt_center padding_top">
-                <i class="note--color note--top fas fa-music"></i>
+                <i class="note-color note--top fas fa-music"></i>
             </div> 
             <article class="flex_center flex_column">
                 <h3 class="margin_null">La note enchantée</h3>
@@ -58,7 +58,7 @@
                     </ul>                   
                 </section>                
                 <section class="flex_column flex_center">
-                    <header class="flexbox flex_center">
+                    <header class="justify-item flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                         <h4 class="size_title_menu1 underline-menu underline-menu1">Point d'orgue</h4>
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
@@ -79,7 +79,7 @@
                     </ul>     
                 </section>                        
                 <section class="flex_column flex_center">
-                    <header class="flexbox flex_center">
+                    <header class="justify-item flex_center">
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
                         <h4 class="size_title_menu1 underline-menu underline-menu1">Mouvement final</h4>
                         <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
@@ -99,7 +99,7 @@
             </article>            
             <div class="txt_center padding_top">
                 <h4>
-                    <i class="note--color note--bottom padding-l-r fas fa-music"></i>La note enchantée
+                    <i class="note-color note--bottom padding-l-r fas fa-music"></i>La note enchantée
                 </h4>
             </div>  
         </main>
