--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,15 @@ h2, h3, h4 {
 }
 
 h2, h3 {
-  font-size: 4rrun em;
+  font-size: 3rem;
+}
+
+h4 {
+  flex-grow: 2;
+}
+
+main section p h3 {
+  font-size: initial;
 }
 
 body {
@@ -65,6 +73,14 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+li {
+  width: 70vw;
+}
+
+article section header {
+  width: 75vw;
 }
 
 .txt_center {
@@ -121,16 +137,28 @@ ul {
 
 @media (min-width: 768px) {
   h2, h3 {
-    font-size: 5rem;
+    font-size: 4rem;
+  }
+
+  li {
+    width: 60vw;
+  }
+
+  article section header {
+    width: 60vw;
   }
 }
 @media (min-width: 1200px) {
   h2, h3 {
-    font-size: 6rem;
+    font-size: 5rem;
   }
 
   li {
     width: 40vw;
+  }
+
+  article section header {
+    width: 42vw;
   }
 
   p {
@@ -141,13 +169,6 @@ ul {
   .flexbox {
     display: flex;
     flex-wrap: nowrap;
-  }
-
-  .size_title_menu1 {
-    font-size: 5rem;
-  }
-  .size_title_menu2 {
-    font-size: 2.3rem;
   }
 
   .padding_bottom_20px {
@@ -232,7 +253,6 @@ footer {
   }
 }
 main {
-  min-height: calc(100vh - 70px);
   margin: 0 auto;
 }
 
@@ -268,9 +288,17 @@ section:focus a {
   font-family: "Kaushanscript";
 }
 
+.size_title_menu1 {
+  font-size: 3rem;
+}
+.size_title_menu2 {
+  font-size: 2.3rem;
+}
+
 .bar_menu {
   display: flex;
   flex-wrap: nowrap;
+  flex-shrink: 3;
   max-width: 100%;
   width: 20%;
   height: auto;
@@ -325,7 +353,7 @@ section:focus a {
   background-color: #fdfffd;
 }
 
-.note--color {
+.note-color {
   align-content: center;
   background: -webkit-linear-gradient(0.4turn, #ffbb00, #f80000);
   background-clip: text;
@@ -344,8 +372,8 @@ section:focus a {
 
 .rectangle-menu {
   margin-top: 50px;
-  height: 220px;
-  width: 45%;
+  height: 75vw;
+  width: 45vw;
 }
 
 .underline-menu:after {
@@ -409,7 +437,7 @@ section:focus a {
 }
 
 .style_menu2 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-family: "Croissantone-regular";
 }
 .style_menu2--a {
@@ -471,6 +499,11 @@ section:focus a {
 }
 
 @media (min-width: 768px) {
+  section h2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .bar_menu {
     max-width: 100%;
     height: auto;
@@ -491,6 +524,13 @@ section:focus a {
     width: 80vw;
   }
 
+  .size_title_menu1 {
+    font-size: 4rem;
+  }
+  .size_title_menu2 {
+    font-size: 2.3rem;
+  }
+
   .style_menu1 {
     font-size: 4rem;
   }
@@ -508,8 +548,8 @@ section:focus a {
   }
 
   .rectangle-menu {
-    height: 600px;
-    width: 40%;
+    height: 75vw;
+    width: 45vw;
   }
 }
 @media (min-width: 1200px) {
@@ -547,6 +587,13 @@ section:focus a {
     width: 20vw;
   }
 
+  .size_title_menu1 {
+    font-size: 5rem;
+  }
+  .size_title_menu2 {
+    font-size: 2.3rem;
+  }
+
   .style_menu1 {
     font-size: 4rem;
   }
@@ -570,12 +617,17 @@ section:focus a {
   }
 
   .rectangle-menu {
-    height: 550px;
-    width: 20%;
+    height: 30vw;
+    width: 20vw;
   }
 
   .note--index {
     font-size: 2vw;
+  }
+
+  .justify-item {
+    display: flex;
+    justify-content: space-around;
   }
 }
 
