--- a/view/mentions_legales.html
+++ b/view/mentions_legales.html
@@ -24,9 +24,55 @@
                 <h1>ohmyfood</h1>
             </a>        
         </header> 
+        <h2>Mentions Legales</h2> 
 
-        <main class="block_center padding_top">
-            <p class="margin_null in-work">Bla Bla Bla<span>.</span><span>.</span><span>.</span></p>
+        <main class="color_menu--bg4 shadow-box padding_bottom">
+            <section class="txt_center block_center padding_top">
+                <p>
+                    Merci de lire avec attention les différentes modalités d’utilisation du présent site avant d’y parcourir ses pages. 
+                    En vous connectant sur ce site, vous acceptez sans réserves les présentes modalités.
+                </p>
+                <p>
+                    Aussi, conformément à l’article n°6 de la Loi n°2004-575 du 21 Juin 2004 pour la confiance dans l’économie numérique, 
+                    les responsables du présent site internet iko-iko.net/ sont :
+                </p>
+                <p> 
+                    <h3>Déclaration à la CNIL :</h3>
+                
+                    Conformément à la loi 78-17 du 6 janvier 1978 (modifiée par la loi 2004-801 du 6 août 2004 relative à la protection des personnes physiques 
+                    à l’égard des traitements de données à caractère personnel) relative à l’informatique, aux fichiers et aux libertés, 
+                    ce site a fait l’objet d’une déclaration 1656629 auprès de la Commission nationale de l’informatique et des libertés (www.cnil.fr).
+                </p>
+                <p>      
+                    <h3>Litiges :</h3>
+                    
+                    Les présentes conditions du site http://iko-iko.net/ sont régies par les lois françaises et toute contestation ou litiges qui pourraient naître 
+                    de l’interprétation ou de l’exécution de celles-ci seront de la compétence exclusive des tribunaux dont dépend le siège social de la société. 
+                    La langue de référence, pour le règlement de contentieux éventuels, est le français.
+                </p>
+                <p>                
+                    <h3>Données personnelles :</h3>
+                    
+                    De manière générale, vous n’êtes pas tenu de nous communiquer vos données personnelles lorsque vous visitez notre site Internet http://iko-iko.net/.                
+                    Cependant, ce principe comporte certaines exceptions. En effet, pour certains services proposés par notre site, 
+                    vous pouvez être amenés à nous communiquer certaines données telles que : votre nom, votre fonction, le nom de votre société, 
+                    votre adresse électronique, et votre numéro de téléphone. Tel est le cas lorsque vous remplissez le formulaire qui vous est proposé en ligne, 
+                    dans la rubrique « contact ».
+                </p>
+                <p>            
+                    Dans tous les cas, vous pouvez refuser de fournir vos données personnelles. Dans ce cas, vous ne pourrez pas utiliser les services du site, 
+                    notamment celui de solliciter des renseignements sur notre société, ou de recevoir les lettres d’information.
+                </p>
+                <p>           
+                    Enfin, nous pouvons collecter de manière automatique certaines informations vous concernant lors d’une simple navigation sur notre site Internet, 
+                    notamment : des informations concernant l’utilisation de notre site, comme les zones que vous visitez et les services auxquels vous accédez, 
+                    votre adresse IP, le type de votre navigateur, vos temps d’accès.
+                  
+                    De telles informations sont utilisées exclusivement à des fins de statistiques internes, de manière à améliorer la qualité des services qui vous sont proposés. 
+                    Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 
+                    relative à la protection juridique des bases de données.
+                </p>     
+            </section>
         </main>
 
         <a class="btn" href='..\index.html'>Retour</a>
