--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -2,6 +2,8 @@
 // ***** 01 - Variables ***** \\
 @import "./utils/variables";
 @import "./utils/mixin";
+@import "./utils/keyframe";
+
 
 // ********************* \\
 // ***** 02 - Base ***** \\
