--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -2,25 +2,27 @@ h1{
     margin: 0;
 }
 
-h1, h2, h3, h4{
+h1, 
+h2, 
+h3, 
+h4{
     text-align: center;
 }
 
-h2, h3, h4{
+h2, 
+h3, 
+h4{
     font-weight: normal;
 }
 
-h2, h3{
+h2, 
+h3{
     font-size: 3rem;
 }
 
 h4{
     flex-grow: 2;
 }  
-
-main section p h3{
-    font-size: initial;
-}
 
 body{
     margin: 0;
@@ -42,7 +44,7 @@ li{
     width: 70vw;        
 }
 
-article section header, {
+section header{
     width: 75vw;
 }
 
@@ -101,7 +103,8 @@ article section header, {
 }
 
 @media (min-width: 768px){
-    h2, h3{
+    h2, 
+    h3{
         font-size: 4rem;
     }
     
@@ -109,14 +112,15 @@ article section header, {
         width: 60vw;        
     }
     
-    article section header {
+    section header {
         width: 60vw;
     }    
 }
 
 
 @media ( min-width : 1200px ) {
-    h2, h3{
+    h2, 
+    h3{
         font-size: 5rem;
     }
 
@@ -124,7 +128,7 @@ article section header, {
         width: 40vw;        
     }
 
-    article section header, {
+    section header{
         width: 42vw;
     }
 
