--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @font-face {
   font-family: "Grotesk-Light";
   src: url("./fonts/Grotesk-Light.ttf");
@@ -39,24 +50,26 @@ h1 {
   margin: 0;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   text-align: center;
 }
 
-h2, h3, h4 {
+h2,
+h3,
+h4 {
   font-weight: normal;
 }
 
-h2, h3 {
+h2,
+h3 {
   font-size: 3rem;
 }
 
 h4 {
   flex-grow: 2;
-}
-
-main section p h3 {
-  font-size: initial;
 }
 
 body {
@@ -79,7 +92,7 @@ li {
   width: 70vw;
 }
 
-article section header {
+section header {
   width: 75vw;
 }
 
@@ -136,7 +149,8 @@ article section header {
 }
 
 @media (min-width: 768px) {
-  h2, h3 {
+  h2,
+h3 {
     font-size: 4rem;
   }
 
@@ -144,12 +158,13 @@ article section header {
     width: 60vw;
   }
 
-  article section header {
+  section header {
     width: 60vw;
   }
 }
 @media (min-width: 1200px) {
-  h2, h3 {
+  h2,
+h3 {
     font-size: 5rem;
   }
 
@@ -157,7 +172,7 @@ article section header {
     width: 40vw;
   }
 
-  article section header {
+  section header {
     width: 42vw;
   }
 
@@ -419,17 +434,6 @@ section:focus a {
   animation-delay: 0.6s;
 }
 
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 .style_menu1 {
   font-size: 2rem;
   font-family: "Devonshire-Regular";
