--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -18,6 +18,7 @@ section{
     background: linear-gradient(30deg, $cd-menu2-a-txt, $cd-menu2-b-txt, $cd-menu2-c-txt);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-family: "Croissantone-regular";
 }
 
 .style_title-three{
