--- a/css/sass/Utils/_mixin.scss
+++ b/css/sass/Utils/_mixin.scss
@@ -1,16 +1,15 @@
-/////MAP//////////
+/////MAP/////////
+$note-sizes:(
+    top : 10vw, 
+    bottom : 5vw,
+    index : 5vw,
+);
 
 $bg-menus: (
     bg1  : $cd-menu1-bg,
     bg2  : $cd-menu2-bg,
     bg3  : $cd-menu3-bg,
     bg4  : $cd-menu4-bg,    
-);
-
-$note-sizes:(
-    top : 10vw, 
-    bottom : 5vw,
-    index : 5vw,
 );
 
 
