--- a/view/mentions_legales.html
+++ b/view/mentions_legales.html
@@ -10,9 +10,11 @@
         <title>ohmyfood</title>
 
         <!-- Secondary Meta -->
-        <meta name="description" content="Menu ohmyfood">
+        <meta name="description" content="Projet Numéro 3 d'OpenClassRooms : ohmyfood - Les menus des plus grands restaurants new-yorkais">
+        <meta name="keywords" content="restaurant, new-york, menu"/>
         <meta name="author" content="Jonathan Roza" />
         <meta name="copyright"   content="MIT">
+        <meta name="robots" content="follow"/>
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="..\css/style.css">             
