--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -10,9 +10,11 @@
         <title>ohmyfood</title>
 
         <!-- Secondary Meta -->
-        <meta name="description" content="Menu ohmyfood">
+        <meta name="description" content="Projet Numéro 3 d'OpenClassRooms : ohmyfood - Les menus des plus grands restaurants new-yorkais">
+        <meta name="keywords" content="restaurant, new-york, menu"/>
         <meta name="author" content="Jonathan Roza" />
         <meta name="copyright"   content="MIT">
+        <meta name="robots" content="follow"/>
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="../css/style.css">
@@ -25,12 +27,13 @@
                 <h1>ohmyfood</h1>
             </a>        
         </header> 
-        <h2>La note enchantée</h2> 
-        <main class="block_center width_menu color_menu--bg1 shadow-box style_menu1 padding_bottom"> 
-            <div class="txt_center padding_top">
-                <i class="note-color note--top fas fa-music"></i>
-            </div> 
-            <article class="flex_center flex_column">
+         
+        <main> 
+            <h2>La note enchantée</h2> 
+            <article class="block_center width_menu color_menu--bg1 shadow-box style_menu1 padding_bottom flex_center flex_column">
+                <div class="txt_center padding_top">
+                    <i class="note-color note--top fas fa-music"></i>
+                </div> 
                 <h3 class="margin_null">La note enchantée</h3>
                 <section class="flex_column flex_center">
                     <header class="flex_center">
@@ -96,14 +99,16 @@
                         </li>                                
                     </ul>     
                 </section>
+                <div class="txt_center padding_top">
+                    <h4>
+                        <i class="note-color note--bottom padding-l-r fas fa-music"></i>La note enchantée
+                    </h4>
+                </div>
             </article>            
-            <div class="txt_center padding_top">
-                <h4>
-                    <i class="note-color note--bottom padding-l-r fas fa-music"></i>La note enchantée
-                </h4>
-            </div>  
+            
+            <a class="btn block_center" href="../index.html">Retour</a>  
         </main>
-        <a class="btn block_center" href="../index.html">Retour</a>
+       
         <footer>
             <a class="btn_foot" href="mentions_legales.html">Mentions légales</a>
             <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>           
