--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -10,9 +10,11 @@
         <title>ohmyfood</title>
 
         <!-- Secondary Meta -->
-        <meta name="description" content="Menu ohmyfood">
+        <meta name="description" content="Projet Numéro 3 d'OpenClassRooms : ohmyfood - Les menus des plus grands restaurants new-yorkais">
+        <meta name="keywords" content="restaurant, new-york, menu"/>
         <meta name="author" content="Jonathan Roza" />
         <meta name="copyright"   content="MIT">
+        <meta name="robots" content="follow"/>
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="../css/style.css">
@@ -25,9 +27,10 @@
                 <h1>ohmyfood</h1>
             </a>        
         </header>
-        <h2>Le délice des papilles</h2>
-        <main class="block_center width_menu color_menu--bg3 shadow-box style_menu3 padding_bottom">  
-            <article class="flex_center flex_column">
+        
+        <main>
+            <h2>Le délice des papilles</h2>  
+            <article class="block_center width_menu color_menu--bg3 shadow-box style_menu3 padding_bottom flex_center flex_column">
                 <h3 class="margin_null padding_top style_title-three">Le délice des papilles</h3>       
                 <section class="flex_column flex_center style_menu3-b">
                     <header class="flex_center">
@@ -93,8 +96,9 @@
                     </ul>
                 </section>                      
             </article>
+            <a class="btn block_center" href="../index.html">Retour</a>
         </main>
-        <a class="btn block_center" href="../index.html">Retour</a>
+        
         <footer>
             <a class="btn_foot" href="mentions_legales.html">Mentions légales</a>
             <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>           
