--- a/view/menu_4b.html
+++ b/view/menu_4b.html
@@ -10,9 +10,11 @@
         <title>ohmyfood</title>
 
         <!-- Secondary Meta -->
-        <meta name="description" content="Menu ohmyfood">
+        <meta name="description" content="Projet Numéro 3 d'OpenClassRooms : ohmyfood - Les menus des plus grands restaurants new-yorkais">
+        <meta name="keywords" content="restaurant, new-york, menu"/>
         <meta name="author" content="Jonathan Roza" />
         <meta name="copyright"   content="MIT">
+        <meta name="robots" content="follow"/>
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="../css/style.css">
@@ -25,9 +27,10 @@
                 <h1>ohmyfood</h1>
             </a>        
         </header>
-        <h2>La palette du goût</h2> 
-        <main class="block_center width_menu color_menu--bg4 shadow-box style_menu4 padding_bottom">
-            <article class="flex_center flex_column">
+  
+        <main>
+            <h2>La palette du goût</h2> 
+            <article class="block_center width_menu color_menu--bg4 shadow-box style_menu4 padding_bottom flex_center flex_column">
                 <h3 class="margin_null padding_top style_title-four">La palette du goût</h3>
                 <section class="flex_column flex_center">
                     <header class="flex_center">
@@ -91,10 +94,10 @@
                             <p>60€</p>
                         </li>                                
                     </ul>
-                </section>            
-            </main>
-
-        <a class="btn block_center" href="../index.html">Retour</a>
+                </section> 
+            </article>    
+            <a class="btn block_center" href="../index.html">Retour</a>     
+        </main>       
 
         <footer>
             <a class="btn_foot" href="mentions_legales.html">Mentions légales</a>
