--- a/view/mentions_legales.html
+++ b/view/mentions_legales.html
@@ -26,10 +26,10 @@
                 <h1>ohmyfood</h1>
             </a>        
         </header> 
-        <h2>Mentions Legales</h2> 
 
-        <main class="color_menu--bg4 shadow-box padding_bottom">
-            <section class="txt_center block_center padding_top">
+        <main>
+            <h2>Mentions Legales</h2> 
+            <section class="padding-l-r color_menu--bg4 shadow-box padding_bottom txt_center block_center padding_top">
                 <p>
                     Merci de lire avec attention les différentes modalités d’utilisation du présent site avant d’y parcourir ses pages. 
                     En vous connectant sur ce site, vous acceptez sans réserves les présentes modalités.
@@ -75,9 +75,8 @@
                     relative à la protection juridique des bases de données.
                 </p>     
             </section>
+            <a class="btn" href='..\index.html'>Retour</a>
         </main>
-
-        <a class="btn" href='..\index.html'>Retour</a>
 
         <footer>
             <a class="btn_foot" href="view/mentions_legales.html">Mentions légales</a>
