--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -20,6 +20,10 @@ h3{
     font-size: 3rem;
 }
 
+.font-size_menu2{
+    font-size: 2rem;
+}
+
 h4{
     flex-grow: 2;
 }  
@@ -107,6 +111,10 @@ section header{
     h3{
         font-size: 4rem;
     }
+
+    .font-size_menu2{
+        font-size: 3rem;
+    }
     
     li{
         width: 60vw;        
@@ -122,6 +130,10 @@ section header{
     h2, 
     h3{
         font-size: 4rem;
+    }
+
+    .font-size_menu2{
+        font-size: 3rem;
     }
 
     li{
